# Web-Scrapping-Detector

./: .gitignore  LAB_SETUP.md  README.md  RESEARCH_RESULTS.md  commands.txt  pyproject.toml  requirements.txt  run_logs.txt  start_project_windows.ps1  validation_report.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/live_labels/: manual_labels.csv  test_labels.csv  test_labels2.csv
data/nginx_demo_prepared/: detection_delay_logistic_regression.csv  metrics_logistic_regression.csv  metrics_random_forest.csv  normalized_requests.csv  prefix_features.csv
data/nginx_demo_raw/: manual_labels.csv
data/prepared_live/: detection_delay_logistic_regression.csv  detection_delay_random_forest.csv  graph_categories.csv  graph_edges.csv  metrics_logistic_regression.csv  metrics_random_forest.csv  normalized_requests.csv  prefix_features.csv  requests.csv  session_summary.csv
data/prepared_run/: graph_categories.csv  graph_edges.csv  (+3 more)
generic_models/: README.md  __init__.py  generic_admin_panel.py  generic_lab.py  generic_site_server.py  generic_traffic.py  site_catalog.py  train_generic_models.py
lab/: README.md
tests/: test_admin_panel.py  test_entropy.py  test_evaluation.py  test_experiment.py  test_export_label_template.py  test_features.py  test_import_human_sessions.py  test_lab_setup.py  test_lab_traffic.py  test_log_pipeline.py  test_online.py
website_lab/: README.md  about.html  articles.html  cart.html  contact.html  faq.html  index.html  products.html  search.html  sitemap.xml
(+188 files in other folders)
