[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-scraping-detector"
version = "0.1.0"
description = "Research-oriented prototype for real-time web scraping detection using traversal graphs and entropy"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Adam Abdel Karim / OpenAI collaboration"}
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "networkx>=3.2",
  "scikit-learn>=1.4",
  "fastapi>=0.111",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
